syntax = "proto3";
package sonrio.sonr.identity.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sonr/identity/v1/params.proto";
import "sonr/identity/v1/did.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sonr-io/sonr/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sonr-io/sonr/identity/params";
  }
  // Queries a DidDocument by index.
	rpc Did(QueryGetDidRequest) returns (QueryGetDidResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/did/{did}";
	}

	// Queries a list of DidDocument items.
	rpc DidAll(QueryAllDidRequest) returns (QueryAllDidResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/did";
	}

    //Queries a DIDDocument for the matching service
	rpc QueryByService(QueryByServiceRequest) returns (QueryByServiceResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/service/{service_id}";
	}

    //Queries a DIDDocument for the matching key 
	rpc QueryByKeyID(QueryByKeyIDRequest) returns (QueryByKeyIDResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/key/{key_id}";
	}

    //Queries a DIDDocument for the matching AlsoKnownAs
	rpc QueryByAlsoKnownAs(QueryByAlsoKnownAsRequest) returns (QueryByAlsoKnownAsResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/aka/{aka_id}";
	}

    //Queries a list of DIDDocument for the matching method 
    rpc QueryByMethod(QueryByMethodRequest) returns (QueryByMethodResponse) {
		option (google.api.http).get = "/sonr-io/sonr/identity/method/{method_id}";
	}

    //Queries Content metadata from IPFS for a given CID
	//rpc QueryMetadataByCID(QueryMetadataByCIDRequest) returns (QueryMetadataByCIDResponse) {
	//	option (google.api.http).get = "/sonr-io/sonr/identity/ipfs_metadata/{cid}";
	//}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDidRequest {
	  string did = 1;
}

message QueryGetDidResponse {
	DidDocument didDocument = 1 [(gogoproto.nullable) = false];
}

message QueryByServiceRequest{
	  string service_id = 1;
}

message QueryByServiceResponse{
	DidDocument didDocument = 1 [(gogoproto.nullable) = false];
}

message QueryByKeyIDRequest{
	  string key_id = 1;
}

message QueryByKeyIDResponse{
	DidDocument didDocument = 1 [(gogoproto.nullable) = false];
}

message QueryByAlsoKnownAsRequest{
	  string aka_id = 1;
}

message QueryByAlsoKnownAsResponse{
	DidDocument didDocument = 1 [(gogoproto.nullable) = false];
}

message QueryByMethodRequest{
    string method_id = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryByMethodResponse{
	repeated DidDocument didDocument = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllDidRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDidResponse {
	repeated DidDocument didDocument = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
